--- a/App/views/macros/footer.twig
+++ b/App/views/macros/footer.twig
@@ -31,7 +31,7 @@
                     Scouts en route
                 </h1>
                 <p>
-                    Les scouts en route, c'est un groupe  de 18 pionniers/caravelles @sgdf, venant de Normandie pour produire un spectacle vivant de marionnettes, dans toute la France
+                    Les scouts en route, c'est un groupe  de 18 pionniers/caravelles, venant de Normandie pour produire un spectacle vivant et solidaire, dans toute la France
                 </p>
             </div>
             <div class="w-full lg:w-1/4">
