--- a/App/views/macros/posts.twig
+++ b/App/views/macros/posts.twig
@@ -4,14 +4,14 @@
             <div class="max-w-md w-full lg:flex posts-mosaic-item">
                 <a href="{{ path_for('blog.post', {id: post.id, slug: post.slug}) }}">
                     <div class="h-48 lg:h-full lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
-                         style="background-image: url('{{ post.thumb_url }}')" title="Woman holding a mug">
+                         style="background-image: url('{{ post.thumb_url }}')">
                     </div>
                 </a>
-                <div class="border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+                <div class="border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal posts-mosaic-item-content">
                     <div class="mb-8">
                         <a href="{{ path_for('blog.post', {id: post.id, slug: post.slug}) }}"
                            class="text-black font-bold text-xl mb-2">{{ post.title }}</a>
-                        <p class="text-grey-darker text-base">{{ short(post.content, 100) }}... <a
+                        <p class="text-grey-darker text-base">{{ short(post.summary , 100) }}... <a
                                     href="{{ path_for('blog.post', {id: post.id, slug: post.slug}) }}">Lire
                                 plus</a></p>
                     </div>
@@ -25,14 +25,6 @@
                 </div>
             </div>
         {% endfor %}
-
-        <div class="posts-mosaic-plus">
-            <a href="{{ path_for('blog.posts') }}"
-               class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded">
-                Voir plus d'articles
-            </a>
-        </div>
-
     </div>
 
 {% endif %}
