--- a/App/views/pages/home.twig
+++ b/App/views/pages/home.twig
@@ -24,12 +24,15 @@
             <h2 class="heading">Dernières actualités</h2>
 
             {{ include('macros/posts.twig') }}
+
+            {% if posts is not empty %}
             <div class="posts-mosaic-plus">
                 <a href="{{ path_for('blog.posts') }}"
                    class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded">
                     Voir plus d'articles
                 </a>
             </div>
+            {% endif %}
         </div>
 
         <div class="w-full lg:w-1/4 twitter-tl-container">
