--- a/App/views/pages/home.twig
+++ b/App/views/pages/home.twig
@@ -1,5 +1,6 @@
 {% extends "default.twig" %}
 {% set title = "Accueil" %}
+{% set og_title = "Scouts en route" %}
 {% set cover = true %}
 {% block cover %}
 
