--- a/App/views/default.twig
+++ b/App/views/default.twig
@@ -1,6 +1,9 @@
 {% if description is not defined %}
     {% set description = "Les scouts en route, c'est un groupe  de 18 pionniers/caravelles, venant de Normandie pour produire un spectacle vivant et solidaire, dans toute la France" %}
 {% endif %}
+{% if og_title is not defined %}
+    {% set og_title = "Scouts en route | " ~ title %}
+{% endif %}
 {% if image is not defined %}
     {% set image = "https://files.lefuturiste.fr/direct/D4CBAD5C3EEEDA063ECF.jpg" %}
 {% endif %}
@@ -11,7 +14,7 @@
     <meta name="charset" content="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <meta property="og:title"              content="{{ title }}" />
+    <meta property="og:title"              content="{{ og_title }}" />
     <meta property="og:description"        content="{{ description }}" />
     <meta property="og:image"              content="{{ image }}" />
     <meta name="robots" content="index,follow" />
