--- a/App/views/pages/carabet.twig
+++ b/App/views/pages/carabet.twig
@@ -1,6 +1,7 @@
 {% extends "default.twig" %}
 {% set title = 'Soirée carabet - 21 avril' %}
 {% set cover = true %}
+{% set cover_type = "cabaret" %}
 {% block cover %}
 
     <div class="cover-cabaret-back">
