--- a/App/views/pages/home.twig
+++ b/App/views/pages/home.twig
@@ -2,6 +2,7 @@
 {% set title = "Accueil" %}
 {% set og_title = "Scouts en route" %}
 {% set cover = true %}
+{% set cover_type = "cabaret" %}
 {% block cover %}
 
     <div class="cover-cabaret-back">
