--- a/App/views/default.twig
+++ b/App/views/default.twig
@@ -50,6 +50,9 @@
     {% if block("style") is defined %}
         {{ block('style') }}
     {% endif %}
+    <script src="http://maps.google.com/maps/api/js?sensor=false"
+            type="text/javascript"></script>
+
 </head>
 <body>
 
