--- a/src/sass/layouts/_cover-tour-full.scss
+++ b/src/sass/layouts/_cover-tour-full.scss
@@ -1,32 +1,31 @@
-.cover-tour {
-  margin-top: 2.5em;
-}
-
-.cover-tour-back {
-  height: 14em;
+.cover-tour-full-back {
+  height: 21em;
   background: black url('https://files.lefuturiste.fr/direct/D4CBAD5C3EEEDA063ECF.jpg');
   background-size: cover;
   background-position-y: center;
 }
 
-.cover-tour-container {
+.header-cover-tour {
+  background-color: rgba(142, 68, 173, 0.8) !important;
+}
+
+.cover-tour-full-container {
   background-color: rgba(142, 68, 173, 0.8);
-  position: relative;
-  top: -14em;
-  margin-bottom: -13em;
+  position: absolute;
+  top: 6em;
   color: white;
   display: flex;
-  padding-top: 5%;
-  height: 14em;
+  padding-top: 3em;
+  height: 15em;
   width: 100%;
 
-  .cover-tour-title {
-    font-size: 2em;
+  .cover-tour-full-title {
+    font-size: 3em;
+
   }
 
-  .cover-tour-subtitle {
+  .cover-tour-full-subtitle {
     margin-top: 0.5em;
-    font-size: 1.2em;
     span {
       opacity: 0.8;
       font-size: 0.8em;
@@ -34,9 +33,9 @@
     }
   }
 
-  .cover-tour-button {
+  .cover-tour-full-button {
     display: block;
-    margin-top: 1.5em;
+    margin-top: 2em;
     width: auto;
     float: left;
     text-decoration: none;
