--- a/src/sass/layouts/_instagram-feed.scss
+++ b/src/sass/layouts/_instagram-feed.scss
@@ -2,7 +2,7 @@
   margin-top: 1.5em;
   .instagram-feed-mosaic {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     margin-top: 1em;
   }
@@ -12,6 +12,7 @@
     opacity: 1;
     display: block;
     margin-right: 1em;
+    margin-bottom: 1em;
     img {
       height: 100%;
     }
@@ -23,15 +24,18 @@
 
   .instagram-feed-plus {
     border-radius: 10px;
-    width: 192px;
+    width: auto;
+    padding-right: 0.5em;
+    padding-left: 0.5em;
     height: 240px;
     display: flex;
     justify-content: center;
     margin-right: 0;
     align-items: center;
-    font-size: 3em;
+    font-size: 2em;
     color: white;
     background-color: rgba(43, 46, 56, 0.8);
+    margin-bottom: 0;
 
     i {
       opacity: 0.8;
