--- a/src/sass/layouts/_instagram-feed.scss
+++ b/src/sass/layouts/_instagram-feed.scss
@@ -3,7 +3,7 @@
   .instagram-feed-mosaic {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     margin-top: 1em;
   }
   .instagram-feed-item {
