--- a/App/views/pages/home.twig
+++ b/App/views/pages/home.twig
@@ -4,16 +4,15 @@
 {% set cover = true %}
 {% set cover_type = "cabaret" %}
 {% block cover %}
-
     <div class="cover-cabaret-back">
     </div>
     <div class="cover-cabaret-container">
         <div class="cover-cabaret-content container mx-auto">
-            <h1 class="cover-cabaret-title">Soirée Cabaret</h1>
-            <h2 class="cover-cabaret-subtitle">21 Avril <span>19h30</span></h2>
+            <h1 class="cover-cabaret-title">Imaginarium Dream</h1>
+            <h2 class="cover-cabaret-subtitle">Du 4 au 25 Août 2018 <span>Dans toute la france</span></h2>
 
-            <a href="{{ path_for('cabaret') }}"
-               class="cover-cabaret-button bg-blue hover:bg-blue-dark text-white font-bold py-3 px-6 rounded font-medium">En
+            <a href="{{ path_for('tour') }}"
+               class="cover-cabaret-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded font-medium">En
                 savoir plus</a>
         </div>
     </div>
