--- a/src/sass/layouts/_cover-cabaret.scss
+++ b/src/sass/layouts/_cover-cabaret.scss
@@ -1,12 +1,12 @@
 .cover-cabaret-back {
   height: 24em;
-  background: black url('https://files.lefuturiste.fr/direct/3D197DBCF0E8A68172EB.jpeg');
+  background: black url('https://files.lefuturiste.fr/direct/D4CBAD5C3EEEDA063ECF.jpg');
   background-size: cover;
   background-position-y: center;
 }
 
 .cover-cabaret-container {
-  background-color: rgba(44,62,80,0.8);
+  background-color: rgba(142, 68, 173, 0.8);
   position: absolute;
   top: 6em;
   color: white;
