--- a/App/views/macros/header.twig
+++ b/App/views/macros/header.twig
@@ -8,7 +8,7 @@
             <li><a href="{{ path_for('home') }}">Accueil</a></li>
             <li><a href="{{ path_for('blog.posts') }}">Actualités</a></li>
             <li><a href="{{ path_for('tour') }}">La Tournée</a></li>
-            <li><a href="{{ path_for('cabaret') }}">Soirée cabaret</a></li>
+            {#<li><a href="{{ path_for('cabaret') }}">Soirée cabaret</a></li>#}
             <li><a href="{{ path_for('about') }}">A propos</a></li>
         </ul>
         <button class="nav-mobile-button" id="nav-mobile-button"><i class="fas fa-bars"></i></button>
