--- a/App/views/pages/home.twig
+++ b/App/views/pages/home.twig
@@ -38,7 +38,7 @@
 
         <div class="w-full lg:w-1/4 twitter-tl-container">
             <a class="twitter-timeline" data-width="100%" data-height="800"
-               href="{{ config('socials')['twitter'] }}?ref_src=twsrc%5Etfw">Tweets by Raspberry_Pi</a>
+               href="{{ config('socials')['twitter'] }}?ref_src=twsrc%5Etfw">Chargement des tweets...</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
