--- a/App/views/pages/tour.twig
+++ b/App/views/pages/tour.twig
@@ -108,7 +108,7 @@ margin-bottom: 0.5em !important;">
     {#</div>#}
 {% endblock %}
 {% block scripts %}
-    <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+    <script src="https://www.openlayers.org/api/OpenLayers.js"></script>
     <script type="text/javascript">
         map = new OpenLayers.Map("mapdiv");
         map.addLayer(new OpenLayers.Layer.OSM());
