--- a/App/views/pages/tour.twig
+++ b/App/views/pages/tour.twig
@@ -106,7 +106,8 @@ margin-bottom: 0.5em !important;">
     {#</div>#}
 {% endblock %}
 {% block scripts %}
-    <script src="https://openlayers.org/api/OpenLayers.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/lib/OpenLayers.js"></script>
     <script type="text/javascript">
         map = new OpenLayers.Map("mapdiv");
         map.addLayer(new OpenLayers.Layer.OSM());
