--- a/src/sass/layouts-responsive/_header.scss
+++ b/src/sass/layouts-responsive/_header.scss
@@ -19,7 +19,7 @@
 .nav-mobile-container {
   z-index: 50;
   position: absolute;
-  background-color: rgba(51, 51, 51, 0.8);
+  background-color: rgba(51, 51, 51, 0.9);
   height: 100vh;
   width: 100%;
   top: 0;
@@ -47,6 +47,7 @@
     text-align: center;
     align-items: center;
     height: 100vh;
+    font-size: 19px;
 
     .nav-mobile-nav {
       margin-top: -25%;
