--- a/src/sass/layouts/_cover-page.scss
+++ b/src/sass/layouts/_cover-page.scss
@@ -2,12 +2,11 @@
   height: 30em;
   margin-bottom: 3em;
   background-size: cover;
-  background-position-y: top;
+  background-position-y: center;
   background-position-x: center;
   display: flex;
   align-items: flex-end;
   align-content: flex-end;
-
 }
 
 .cover-page-content {
