--- a/App/views/macros/posts.twig
+++ b/App/views/macros/posts.twig
@@ -4,7 +4,7 @@
             <div class="max-w-md w-full lg:flex posts-mosaic-item">
                 <a href="{{ path_for('blog.post', {id: post.id, slug: post.slug}) }}">
                     <div class="h-48 lg:h-full lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
-                         style="background-image: url('{{ post.thumb_url }}')">
+                         style="background-image: url('{{ post.thumb_url }}');background-position-y: center;">
                     </div>
                 </a>
                 <div class="border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal posts-mosaic-item-content">
