--- a/src/sass/layouts-responsive/_instagram-feed.scss
+++ b/src/sass/layouts-responsive/_instagram-feed.scss
@@ -2,7 +2,7 @@
 
   .instagram-feed-mosaic {
     justify-content: space-around;
-    flex-wrap: wrap;
+    flex-wrap: wrap !important;
   }
 
   .instagram-feed-item {
