add spotify & soundcloud button (beta)

--- a/App/views/pages/tour.twig
+++ b/App/views/pages/tour.twig
@@ -62,7 +62,26 @@ margin-bottom: 0.5em !important;">
 
                 </div>
             </div>
-
+        </section>
+        <section class="playlist">
+            <div class="flex flex-wrap">
+                <div style="width: 100%">
+                    <h2 class="section-mosaic-title">La playlist du spectacle</h2>
+                    <p style="margin-top: -10px; margin-bottom: 30px; font-size: 16px; padding-right: 0.5em">
+                        Découvrez la playlist du spectacle sur Spotify et Soundcloud
+                    </p>
+                    <div class="actions-buttons">
+                        <a class="btn spotify-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
+                            <i class="fab fa-spotify"></i>
+                            Spotify
+                        </a>
+                        <a class="btn soundcloud-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
+                            <i class="fab fa-soundcloud"></i>
+                            Soundcloud
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <style>
             .list-city {
