--- a/App/views/pages/tour.twig
+++ b/App/views/pages/tour.twig
@@ -71,11 +71,11 @@ margin-bottom: 0.5em !important;">
                         Découvrez la playlist du spectacle sur Spotify et Soundcloud
                     </p>
                     <div class="actions-buttons">
-                        <a class="btn spotify-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
+                        <a href="https://open.spotify.com/user/lefuturiste/playlist/7yr3s2jDNDM1Jx9eUHXOmz" class="btn spotify-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
                             <i class="fab fa-spotify"></i>
                             Spotify
                         </a>
-                        <a class="btn soundcloud-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
+                        <a href="https://soundcloud.com/le_futuriste/sets/imaginarium-dream" class="btn soundcloud-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
                             <i class="fab fa-soundcloud"></i>
                             Soundcloud
                         </a>
