add youtube button to playlist show & fix responsive design issue

--- a/App/views/pages/tour.twig
+++ b/App/views/pages/tour.twig
@@ -75,6 +75,12 @@ margin-bottom: 0.5em !important;">
                             <i class="fab fa-spotify"></i>
                             Spotify
                         </a>
+			<a 
+href="https://www.youtube.com/playlist?list=PLw4sRd0fHP4DGnV05GWqxKNqwySvmSX9t" class="btn 
+youtube-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
+                            <i class="fab fa-youtube"></i>
+                            YouTube       
+			</a>
                         <a href="https://soundcloud.com/le_futuriste/sets/imaginarium-dream" class="btn soundcloud-button bg-pink hover:bg-pink-dark text-white font-bold py-3 px-6 rounded">
                             <i class="fab fa-soundcloud"></i>
                             Soundcloud
